--- a/Slides/Syllabus.html
+++ b/Slides/Syllabus.html
@@ -3096,7 +3096,7 @@ vertical-align: -.125em;
 <ul>
 <li><p><strong>Term:</strong> Winter</p></li>
 <li><p><strong>Credits:</strong> 3 Hours</p></li>
-<li><p><strong>Meeting Time:</strong> MTWRF from 6:00 to 8:45 PM (January 2nd through January 22rd)</p></li>
+<li><p><strong>Meeting Time:</strong> MTWRF from 6:00 to 8:45 PM (January 2nd through January 22nd)</p></li>
 <li><p><strong>Location:</strong> Online over Zoom</p></li>
 <li><p><strong>Instructor:</strong> Neil Lund</p>
 <ul>
